infrastructure/k8s/stg/app-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: cover-service
  name: cover-service
  labels:
    tier: frontend
spec:
  selector:
    app: cover-service-app
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cover-service
  name: cover-service-app
spec:
  selector:
    matchLabels:
      app: cover-service-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: cover-service-app
        tier: frontend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/scheme: "http"
    spec:
      imagePullSecrets:
        - name: github-registry
      containers:
      - name: coverservice
        image: docker.pkg.github.com/danskernesdigitalebibliotek/ddb-cover-service/cover-service
        imagePullPolicy: Always
        resources:
          requests:
            memory: "256Mi"
            cpu: "300m"
          limits:
            memory: "384Mi"
            cpu: "500m"
        readinessProbe:
          exec:
            command:
              - php-fpm-healthcheck
          initialDelaySeconds: 1
          periodSeconds: 5
        livenessProbe:
          exec:
            command:
              - php-fpm-healthcheck
              #- --accepted-conn=50000
          initialDelaySeconds: 0
          periodSeconds: 10
        ports:
          - containerPort: 9000
          - containerPort: 9253
      - name: nginx
        image: docker.pkg.github.com/danskernesdigitalebibliotek/ddb-cover-service/nginx
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "96Mi"
            cpu: "300m"
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        ports:
          - containerPort: 80
      - name: nginx-exporter
        image: nginx/nginx-prometheus-exporter:0.5.0
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "96Mi"
            cpu: "100m"
        readinessProbe:
          tcpSocket:
            port: 9113
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 9113
          initialDelaySeconds: 5
          periodSeconds: 10
        ports:
          - containerPort: 9113
