infrastructure/k8s/stg/nginx-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: cover-service
  name: nginx-cover-service
  labels:
    tier: frontend
spec:
  selector:
    app: nginx
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cover-service
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
      tier: frontend
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: nginx
        tier: frontend
    spec:
      imagePullSecrets:
        - name: github-registry
      containers:
        - name: coverservice
          image: docker.pkg.github.com/danskernesdigitalebibliotek/ddb-cover-service/nginx
          imagePullPolicy: Always
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "96Mi"
              cpu: "300m"
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          ports:
            - containerPort: 80
