infrastructure/k8s/stg/redis-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: cover-service
  name: redis
  labels:
    tier: backend
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cover-service
  name: redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9121"
    spec:
      containers:
      - name: redis
        image: redis:4-alpine
        command:
          - redis-server
          - "/etc/redis/redis.conf"
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "300m"
        volumeMounts:
          - mountPath: /etc/redis/
            name: config
        ports:
          - containerPort: 6379
      - name: redis-exporter
        image: oliver006/redis_exporter
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
          - containerPort: 9121
      volumes:
        - name: config
          configMap:
            name: redis-config
            items:
              - key: redis.conf
                path: redis.conf
