infrastructure/k8s/stg/app-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: cover-service
  name: cover-service-frontend
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    prometheus.io/scrape: "true"
    prometheus.io/port: "10254"
spec:
  tls:
    - hosts:
        - coverservice.itkdev.dk
      secretName: cover-service-frontend-tls-secret
  rules:
    - host: coverservice.itkdev.dk
      http:
        paths:
          - backend:
              serviceName: nginx-cover-service
              servicePort: 80
            path: /
